# ragchatbot

./: README.md  create_database.py  pyproject.toml  query_data.py
chroma/: chroma.sqlite3
